--- a/BringTheWashingIn!/app.json
+++ b/BringTheWashingIn!/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/inde",
-    "pages/list/list"
+    "pages/list/list",
+    "pages/template/template"
   ],
   "window": {
     "backgroundTextStyle": "light",
