--- a/BringTheWashingIn!/project.config.json
+++ b/BringTheWashingIn!/project.config.json
@@ -48,12 +48,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "pages/list/list",
 					"pathName": "pages/list/list",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/template/template",
+					"pathName": "pages/template/template",
 					"scene": null
 				}
 			]
